--- a/css/properties-editor.css
+++ b/css/properties-editor.css
@@ -31,7 +31,7 @@ h2 {
   box-shadow: 0 2px 2px 1px #888;
 }
 
-button, input[type=file] {
+button, #file-label {
   border: 1px solid #777;
   border-radius: 3px;
   padding: 3px 8px;
@@ -40,10 +40,12 @@ button, input[type=file] {
   font-size: 13px;
   text-align: center;
 }
-button:hover, input[type=file]:hover {
+button:hover,,
+#file-labe:hover {
   background-color: #c4e2a5;
 }
-input[type=text], input[type=password] {
+input[type=text],
+input[type=password] {
   padding: 1px;
   margin: 0;
   font-size: 13px;
@@ -51,6 +53,11 @@ input[type=text], input[type=password] {
 button:active {
   color: white;
   font-weight: bold;
+}
+#file {
+   opacity: 0;
+   position: absolute;
+   z-index: -1;
 }
 
 #settings-div {
@@ -154,9 +161,10 @@ button:active {
   text-decoration: line-through;
   color: gray;
 }
-#debug {
+#editor {
   width: 100%;
   height: 300px;
+  font-size: 13px;
 }
 
 
